# object_model

./: .gitignore  CMakeLists.txt  Generate Pseudo Code.py  README.md  all_ast_classes.txt  build.sh  get_all_ast_classes.py  notes.md  screen_shots.sh
2_constructors/: 01_default_constructor_construction.cpp  01_default_constructor_construction.hop  01_default_constructor_construction.pseudo.c  01_default_constructor_construction.s  01_default_constructor_construction_ast.txt  01_default_constructor_construction_layout.txt  02_member_class_object_with_default_constructor.cpp  02_member_class_object_with_default_constructor.hop  02_member_class_object_with_default_constructor.pseudo.c  02_member_class_object_with_default_constructor.s  02_member_class_object_with_default_constructor_ast.txt  02_member_class_object_with_default_constructor_layout.txt  03_class_with_a_virtual_function.cpp  03_class_with_a_virtual_function.hop  03_class_with_a_virtual_function.pseudo.c  03_class_with_a_virtual_function.s  03_class_with_a_virtual_function_ast.txt  03_class_with_a_virtual_function_layout.txt  04_class_with_a_virtual_base_class.cpp  04_class_with_a_virtual_base_class.hop  04_class_with_a_virtual_base_class.pseudo.c  04_class_with_a_virtual_base_class.s  04_class_with_a_virtual_base_class_ast.txt  04_class_with_a_virtual_base_class_layout.txt  05_copy_constructor_construction.cpp  05_copy_constructor_construction.hop  05_copy_constructor_construction.pseudo.c  05_copy_constructor_construction.s  05_copy_constructor_construction_ast.txt  05_copy_constructor_construction_layout.txt  06_default_memberwise_initialization.cpp  06_default_memberwise_initialization.hop  06_default_memberwise_initialization.pseudo.c  06_default_memberwise_initialization.s  06_default_memberwise_initialization_layout.txt  07_bitwise_copy_semantics.cpp  07_bitwise_copy_semantics.hop  07_bitwise_copy_semantics.pseudo.c  07_bitwise_copy_semantics.s  07_bitwise_copy_semantics_layout.txt  (+37 more)
3_data/: 01_data_member_layout.cpp  01_data_member_layout.hop  01_data_member_layout.pseudo.c  01_data_member_layout.s  01_data_member_layout_layout.txt  02_access_of_data_member.cpp  02_access_of_data_member.hop  02_access_of_data_member.pseudo.c  02_access_of_data_member.s  02_access_of_data_member_ast.txt  02_access_of_data_member_layout.txt  03_inheritance_and_the_data_members.cpp  03_inheritance_and_the_data_members.hop  03_inheritance_and_the_data_members.pseudo.c  03_inheritance_and_the_data_members.s  03_inheritance_and_the_data_members_ast.txt  03_inheritance_and_the_data_members_layout.txt  04_inheritance_without_polymorphism.cpp  04_inheritance_without_polymorphism.hop  04_inheritance_without_polymorphism.pseudo.c  04_inheritance_without_polymorphism.s  04_inheritance_without_polymorphism_ast.txt  04_inheritance_without_polymorphism_layout.txt  05_adding_polymoprhism.hop  05_adding_polymoprhism.pseudo.c  05_adding_polymoprhism_ast.txt  05_adding_polymoprhism_layout.txt  05_adding_polymorphism.cpp  05_adding_polymorphism.hop  05_adding_polymorphism.pseudo.c  05_adding_polymorphism.s  05_adding_polymorphism_ast.txt  05_adding_polymorphism_layout.txt  06_multiple_inheritance.cpp  06_multiple_inheritance.hop  06_multiple_inheritance.pseudo.c  06_multiple_inheritance.s  06_multiple_inheritance_ast.txt  06_multiple_inheritance_layout.txt  07_virtual_inheritance.cpp  (+12 more)
4_functions/: 01_nonstatic_member_functions.cpp  01_nonstatic_member_functions.hop  01_nonstatic_member_functions.pseudo.c  01_nonstatic_member_functions.s  01_nonstatic_member_functions_layout.txt  02_virtual_member_functions.cpp  02_virtual_member_functions.hop  02_virtual_member_functions.pseudo.c  02_virtual_member_functions.s  02_virtual_member_functions_ast.txt  02_virtual_member_functions_layout.txt  03_static_member_functions.cpp  03_static_member_functions.hop  03_static_member_functions.pseudo.c  03_static_member_functions.s  03_static_member_functions_ast.txt  03_static_member_functions_layout.txt  04_virtual_functions_under_multiple_inheritance.cpp  04_virtual_functions_under_multiple_inheritance.hop  04_virtual_functions_under_multiple_inheritance.pseudo.c  04_virtual_functions_under_multiple_inheritance.s  04_virtual_functions_under_multiple_inheritance_ast.txt  04_virtual_functions_under_multiple_inheritance_layout.txt  05_virtual_functions_under_virtual_inheritance.cpp  05_virtual_functions_under_virtual_inheritance.hop  05_virtual_functions_under_virtual_inheritance.pseudo.c  05_virtual_functions_under_virtual_inheritance.s  05_virtual_functions_under_virtual_inheritance_ast.txt  05_virtual_functions_under_virtual_inheritance_layout.txt  06_pointer_to_member_functions.cpp  06_pointer_to_member_functions.hop  06_pointer_to_member_functions.pseudo.c  06_pointer_to_member_functions.s  06_pointer_to_member_functions_ast.txt  06_pointer_to_member_functions_layout.txt  07_inline_functions.cpp  07_inline_functions.hop  07_inline_functions.pseudo.c  07_inline_functions.s  07_inline_functions_layout.txt  (+12 more)
5_ctor_dtor_semantics/: 01_presence_of_a_virtual_specification.cpp  01_presence_of_a_virtual_specification.hop  01_presence_of_a_virtual_specification.pseudo.c  01_presence_of_a_virtual_specification.s  01_presence_of_a_virtual_specification_ast.txt  01_presence_of_a_virtual_specification_layout.txt  02_object_construction_without_inheritance.cpp  02_object_construction_without_inheritance.hop  02_object_construction_without_inheritance.pseudo.c  02_object_construction_without_inheritance.s  02_object_construction_without_inheritance_ast.txt  02_object_construction_without_inheritance_layout.txt  03_object_construction_under_inheritance.cpp  03_object_construction_under_inheritance.hop  03_object_construction_under_inheritance.pseudo.c  03_object_construction_under_inheritance.s  03_object_construction_under_inheritance_ast.txt  03_object_construction_under_inheritance_layout.txt  04_virtual_inheritance.cpp  04_virtual_inheritance.hop  04_virtual_inheritance.pseudo.c  04_virtual_inheritance.s  04_virtual_inheritance_ast.txt  04_virtual_inheritance_layout.txt  (+13 more)
(+132 files in other folders)
