project(data)

add_compile_options(${NO_OPT})

add_executable(01_data_member_layout 01_data_member_layout.cpp)
add_executable(02_access_of_data_member 02_access_of_data_member.cpp)
add_executable(03_inheritance_and_the_data_members 03_inheritance_and_the_data_members.cpp)
add_executable(04_inheritance_without_polymorphism 04_inheritance_without_polymorphism.cpp)
add_executable(05_adding_polymorphism 05_adding_polymorphism.cpp)
add_executable(06_multiple_inheritance 06_multiple_inheritance.cpp)
add_executable(07_virtual_inheritance 07_virtual_inheritance.cpp)
add_executable(08_pointer_to_data_members 08_pointer_to_data_members.cpp)
