project(functions)

add_compile_options(${NO_OPT})

add_executable(01_nonstatic_member_functions 01_nonstatic_member_functions.cpp)
add_executable(02_virtual_member_functions 02_virtual_member_functions.cpp)
add_executable(03_static_member_functions 03_static_member_functions.cpp)
add_executable(04_virtual_functions_under_multiple_inheritance 04_virtual_functions_under_multiple_inheritance.cpp)
add_executable(05_virtual_functions_under_virtual_inheritance 05_virtual_functions_under_virtual_inheritance.cpp)
add_executable(06_pointer_to_member_functions 06_pointer_to_member_functions.cpp)
add_executable(07_inline_functions 07_inline_functions.cpp)
add_executable(08_formal_arguments 08_formal_arguments.cpp)
add_executable(09_local_variables 09_local_variables.cpp)
