project(ctor_dtor_semantics)

add_executable(1_presence_of_a_virtual_specification 01_presence_of_a_virtual_specification.cpp)
target_compile_options(1_presence_of_a_virtual_specification PUBLIC ${NO_OPT})

add_executable(2_object_construction_without_inheritance 02_object_construction_without_inheritance.cpp)
target_compile_options(2_object_construction_without_inheritance PUBLIC ${NO_OPT})

add_executable(3_object_construction_under_inheritance 03_object_construction_under_inheritance.cpp)
target_compile_options(3_object_construction_under_inheritance PUBLIC ${NO_OPT})

add_executable(4_virtual_inheritance 04_virtual_inheritance.cpp)
target_compile_options(4_virtual_inheritance PUBLIC ${NO_OPT})

add_executable(5_object_copy_semantics 05_object_copy_semantics.cpp)
target_compile_options(5_object_copy_semantics PUBLIC ${NO_OPT})

add_executable(6_object_move_semantics 06_object_move_semantics.cpp)
target_compile_options(6_object_move_semantics PUBLIC ${NO_OPT})
