project(ctor_dtor_semantics)

add_compile_options(${NO_OPT})

add_executable(01_presence_of_a_virtual_specification 01_presence_of_a_virtual_specification.cpp)
add_executable(02_object_construction_without_inheritance 02_object_construction_without_inheritance.cpp)
add_executable(03_object_construction_under_inheritance 03_object_construction_under_inheritance.cpp)
add_executable(04_virtual_inheritance 04_virtual_inheritance.cpp)
add_executable(05_object_copy_semantics 05_object_copy_semantics.cpp)
add_executable(06_object_move_semantics 06_object_move_semantics.cpp)
