project(memory_model)

add_compile_options(${NO_OPT})

add_executable(01_objects_and_memory_locations 01_objects_and_memory_locations.cpp)
add_executable(02_objects_memory_locations_and_concurrency 02_objects_memory_locations_and_concurrency.cpp)
add_executable(03_atomic_operations_and_types 03_atomic_operations_and_types.cpp)
add_executable(04_synchronizing_operations_and_enforcing_ordering 04_synchronizing_operations_and_enforcing_ordering.cpp)
