project(profiling)

add_executable(data_access1_no_opt data_access_under_increasing_abstraction.cpp)
target_link_libraries(data_access1_no_opt benchmark)
target_compile_options(data_access1_no_opt PUBLIC ${NO_OPT})

add_executable(data_access1_max_opt data_access_under_increasing_abstraction.cpp)
target_link_libraries(data_access1_max_opt benchmark)
target_compile_options(data_access1_max_opt PUBLIC ${MAX_OPT})

add_executable(data_access1_fast_opt data_access_under_increasing_abstraction.cpp)
target_link_libraries(data_access1_fast_opt benchmark)
target_compile_options(data_access1_fast_opt PUBLIC ${FAST_OPT})

add_executable(data_access2_no_opt data_access_under_virtual_inheritance.cpp)
target_link_libraries(data_access2_no_opt benchmark)
target_compile_options(data_access2_no_opt PUBLIC ${NO_OPT})

add_executable(data_access2_max_opt data_access_under_virtual_inheritance.cpp)
target_link_libraries(data_access2_max_opt benchmark)
target_compile_options(data_access2_max_opt PUBLIC ${MAX_OPT})

add_executable(data_access2_fast_opt data_access_under_virtual_inheritance.cpp)
target_link_libraries(data_access2_fast_opt benchmark)
target_compile_options(data_access2_fast_opt PUBLIC ${FAST_OPT})

add_executable(nonstatic_data_member_access_no_opt nonstatic_data_member_access.cpp)
target_link_libraries(nonstatic_data_member_access_no_opt benchmark)
target_compile_options(nonstatic_data_member_access_no_opt PUBLIC ${NO_OPT})

add_executable(nonstatic_data_member_access_max_opt nonstatic_data_member_access.cpp)
target_link_libraries(nonstatic_data_member_access_max_opt benchmark)
target_compile_options(nonstatic_data_member_access_max_opt PUBLIC ${MAX_OPT})

add_executable(nonstatic_data_member_access_fast_opt nonstatic_data_member_access.cpp)
target_link_libraries(nonstatic_data_member_access_fast_opt benchmark)
target_compile_options(nonstatic_data_member_access_fast_opt PUBLIC ${FAST_OPT})

add_executable(pointer_to_data_member_access_no_opt pointer_to_data_member_access.cpp)
target_link_libraries(pointer_to_data_member_access_no_opt benchmark)
target_compile_options(pointer_to_data_member_access_no_opt PUBLIC ${NO_OPT})

add_executable(pointer_to_data_member_access_max_opt pointer_to_data_member_access.cpp)
target_link_libraries(pointer_to_data_member_access_max_opt benchmark)
target_compile_options(pointer_to_data_member_access_max_opt PUBLIC ${MAX_OPT})

add_executable(pointer_to_data_member_access_fast_opt pointer_to_data_member_access.cpp)
target_link_libraries(pointer_to_data_member_access_fast_opt benchmark)
target_compile_options(pointer_to_data_member_access_fast_opt PUBLIC ${FAST_OPT})

add_executable(function_performance_no_opt function_performance.cpp)
target_link_libraries(function_performance_no_opt benchmark)
target_compile_options(function_performance_no_opt PUBLIC ${NO_OPT})

add_executable(function_performance_max_opt function_performance.cpp)
target_link_libraries(function_performance_max_opt benchmark)
target_compile_options(function_performance_max_opt PUBLIC ${MAX_OPT})

add_executable(function_performance_fast_opt function_performance.cpp)
target_link_libraries(function_performance_fast_opt benchmark)
target_compile_options(function_performance_fast_opt PUBLIC ${FAST_OPT})

add_executable(memberwise_initialization_and_copy_no_opt memberwise_initialization_and_copy.cpp)
target_link_libraries(memberwise_initialization_and_copy_no_opt benchmark)
target_compile_options(memberwise_initialization_and_copy_no_opt PUBLIC ${NO_OPT})

add_executable(memberwise_initialization_and_copy_max_opt memberwise_initialization_and_copy.cpp)
target_link_libraries(memberwise_initialization_and_copy_max_opt benchmark)
target_compile_options(memberwise_initialization_and_copy_max_opt PUBLIC ${MAX_OPT})

add_executable(memberwise_initialization_and_copy_fast_opt memberwise_initialization_and_copy.cpp)
target_link_libraries(memberwise_initialization_and_copy_fast_opt benchmark)
target_compile_options(memberwise_initialization_and_copy_fast_opt PUBLIC ${FAST_OPT})
