project(profiling)

add_executable(01_data_access1_no_opt 01_data_access_under_increasing_abstraction.cpp)
target_link_libraries(01_data_access1_no_opt benchmark)
target_compile_options(01_data_access1_no_opt PUBLIC ${NO_OPT})

add_executable(01_data_access1_max_opt 01_data_access_under_increasing_abstraction.cpp)
target_link_libraries(01_data_access1_max_opt benchmark)
target_compile_options(01_data_access1_max_opt PUBLIC ${MAX_OPT})

add_executable(01_data_access1_fast_opt 01_data_access_under_increasing_abstraction.cpp)
target_link_libraries(01_data_access1_fast_opt benchmark)
target_compile_options(01_data_access1_fast_opt PUBLIC ${FAST_OPT})

add_executable(02_data_access2_no_opt 02_data_access_under_virtual_inheritance.cpp)
target_link_libraries(02_data_access2_no_opt benchmark)
target_compile_options(02_data_access2_no_opt PUBLIC ${NO_OPT})

add_executable(02_data_access2_max_opt 02_data_access_under_virtual_inheritance.cpp)
target_link_libraries(02_data_access2_max_opt benchmark)
target_compile_options(02_data_access2_max_opt PUBLIC ${MAX_OPT})

add_executable(02_data_access2_fast_opt 02_data_access_under_virtual_inheritance.cpp)
target_link_libraries(02_data_access2_fast_opt benchmark)
target_compile_options(02_data_access2_fast_opt PUBLIC ${FAST_OPT})

add_executable(03_nonstatic_data_member_access_no_opt 03_nonstatic_data_member_access.cpp)
target_link_libraries(03_nonstatic_data_member_access_no_opt benchmark)
target_compile_options(03_nonstatic_data_member_access_no_opt PUBLIC ${NO_OPT})

add_executable(03_nonstatic_data_member_access_max_opt 03_nonstatic_data_member_access.cpp)
target_link_libraries(03_nonstatic_data_member_access_max_opt benchmark)
target_compile_options(03_nonstatic_data_member_access_max_opt PUBLIC ${MAX_OPT})

add_executable(03_nonstatic_data_member_access_fast_opt 03_nonstatic_data_member_access.cpp)
target_link_libraries(03_nonstatic_data_member_access_fast_opt benchmark)
target_compile_options(03_nonstatic_data_member_access_fast_opt PUBLIC ${FAST_OPT})

add_executable(04_pointer_to_data_member_access_no_opt 04_pointer_to_data_member_access.cpp)
target_link_libraries(04_pointer_to_data_member_access_no_opt benchmark)
target_compile_options(04_pointer_to_data_member_access_no_opt PUBLIC ${NO_OPT})

add_executable(04_pointer_to_data_member_access_max_opt 04_pointer_to_data_member_access.cpp)
target_link_libraries(04_pointer_to_data_member_access_max_opt benchmark)
target_compile_options(04_pointer_to_data_member_access_max_opt PUBLIC ${MAX_OPT})

add_executable(04_pointer_to_data_member_access_fast_opt 04_pointer_to_data_member_access.cpp)
target_link_libraries(04_pointer_to_data_member_access_fast_opt benchmark)
target_compile_options(04_pointer_to_data_member_access_fast_opt PUBLIC ${FAST_OPT})

add_executable(05_function_performance_no_opt 05_function_performance.cpp)
target_link_libraries(05_function_performance_no_opt benchmark)
target_compile_options(05_function_performance_no_opt PUBLIC ${NO_OPT})

add_executable(05_function_performance_max_opt 05_function_performance.cpp)
target_link_libraries(05_function_performance_max_opt benchmark)
target_compile_options(05_function_performance_max_opt PUBLIC ${MAX_OPT})

add_executable(05_function_performance_fast_opt 05_function_performance.cpp)
target_link_libraries(05_function_performance_fast_opt benchmark)
target_compile_options(05_function_performance_fast_opt PUBLIC ${FAST_OPT})

add_executable(06_memberwise_initialization_and_copy_no_opt 06_memberwise_initialization_and_copy.cpp)
target_link_libraries(06_memberwise_initialization_and_copy_no_opt benchmark)
target_compile_options(06_memberwise_initialization_and_copy_no_opt PUBLIC ${NO_OPT})

add_executable(06_memberwise_initialization_and_copy_max_opt 06_memberwise_initialization_and_copy.cpp)
target_link_libraries(06_memberwise_initialization_and_copy_max_opt benchmark)
target_compile_options(06_memberwise_initialization_and_copy_max_opt PUBLIC ${MAX_OPT})

add_executable(06_memberwise_initialization_and_copy_fast_opt 06_memberwise_initialization_and_copy.cpp)
target_link_libraries(06_memberwise_initialization_and_copy_fast_opt benchmark)
target_compile_options(06_memberwise_initialization_and_copy_fast_opt PUBLIC ${FAST_OPT})
